chore: MISC - move Activities to new ui package.

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,4 +10,4 @@
     android:src="@drawable/software_group_logo_white"
     android:theme="@style/SplashActivityTheme"
     android:transitionName="@string/transition_name_logo"
-    tools:context=".SplashActivity" />
+    tools:context=".ui.SplashActivity" />
