--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,14 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/blueMainDark</item>
-        <item name="colorPrimaryDark">@color/blueMain</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:navigationBarColor">@color/black_overlay</item>
+        <item name="android:statusBarColor">@null</item>
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
-
 
     <style name="SplashActivityTheme" parent="AppTheme">
         <item name="colorPrimaryDark">@color/blueSplash</item>
