--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,7 @@
     android:id="@+id/logo_splash_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/blueMainDark"
     android:contentDescription="@string/content_description_splash_screen"
     android:scaleType="centerInside"
     android:src="@drawable/software_group_logo_white"
