--- a/app/src/main/res/layout/app_bar_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_dashboard.xml
@@ -37,6 +37,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_dashboard" />
+    <FrameLayout
+        android:id="@+id/dashboard_content_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
