--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:fitsSystemWindows">true</item>
+        <item name="android:windowSharedElementEnterTransition">@transition/content_transition</item>
+        <item name="android:windowSharedElementExitTransition">@transition/content_transition</item>
     </style>
 
     <style name="SplashActivityTheme" parent="AppTheme">
