--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/logo_splash_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blueMainDark"
-    android:contentDescription="@string/content_description_splash_screen"
-    android:scaleType="centerInside"
-    android:src="@drawable/software_group_logo_white"
-    android:theme="@style/SplashActivityTheme"
-    android:transitionName="@string/transition_name_logo"
-    tools:context=".ui.SplashActivity" />
+    android:theme="@style/SplashActivityTheme">
+
+    <ImageView
+        android:id="@+id/logo_splash_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:contentDescription="@string/content_description_splash_screen"
+        android:scaleType="centerInside"
+        android:src="@drawable/software_group_logo_white"
+        android:transitionName="@string/transition_name_logo"
+        tools:context=".ui.SplashActivity" />
+
+</FrameLayout>
