--- a/app/src/main/res/layout/card_dashboard_report.xml
+++ b/app/src/main/res/layout/card_dashboard_report.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Widget.MaterialComponents.CardView"
@@ -8,13 +8,13 @@
     app:cardCornerRadius="6dp"
     app:cardElevation="@dimen/elevationNormal">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="300dp"
         android:minHeight="110dp">
 
-        <android.support.constraint.Guideline
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_horizontal_middle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:background="@drawable/gradient_toolbar" />
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -49,7 +49,7 @@
                 android:layout_margin="@dimen/spacingMid"
                 android:scaleType="fitCenter"
                 android:src="@drawable/loan_applications_nav" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/text_title"
@@ -85,9 +85,9 @@
             tools:text="70"
             tools:textColor="#1b7efa" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <!--app:cardCornerRadius="@dimen/radiusNormal"-->
     <!--android:elevation="@dimen/elevationNormal"-->
 
 
-</android.support.design.card.MaterialCardView>
+</com.google.android.material.card.MaterialCardView>
