--- a/app/src/main/res/layout-w940dp/dashboard_report_fragment.xml
+++ b/app/src/main/res/layout-w940dp/dashboard_report_fragment.xml
@@ -10,26 +10,28 @@
     <include
         android:id="@+id/card_report_loan_apps"
         layout="@layout/card_dashboard_report"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacingMid"
-        app:layout_constraintBottom_toTopOf="@+id/card_report_loans"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/card_report_loans"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <include
         android:id="@+id/card_report_loans"
         layout="@layout/card_dashboard_report"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacingMid"
-        app:layout_constraintTop_toBottomOf="@+id/card_report_loan_apps" />
+        app:layout_constraintEnd_toStartOf="@+id/card_report_accounts"
+        app:layout_constraintStart_toEndOf="@+id/card_report_loan_apps" />
 
     <include
         android:id="@+id/card_report_accounts"
         layout="@layout/card_dashboard_report"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacingMid"
-        app:layout_constraintTop_toBottomOf="@+id/card_report_loans" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/card_report_loans" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
