--- a/app/src/main/res/layout/dashboard_report_fragment.xml
+++ b/app/src/main/res/layout/dashboard_report_fragment.xml
@@ -1,35 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/spacingMid"
     tools:context=".ui.DashboardReportFragment">
 
-    <include
-        android:id="@+id/card_report_loan_apps"
-        layout="@layout/card_dashboard_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/spacingMid"
-        app:layout_constraintBottom_toTopOf="@+id/card_report_loans"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <include
-        android:id="@+id/card_report_loans"
-        layout="@layout/card_dashboard_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/spacingMid"
-        app:layout_constraintTop_toBottomOf="@+id/card_report_loan_apps" />
-
-    <include
-        android:id="@+id/card_report_accounts"
-        layout="@layout/card_dashboard_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/spacingMid"
-        app:layout_constraintTop_toBottomOf="@+id/card_report_loans" />
+    <include layout="@layout/dashborad_report_cards"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
