--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="white">#FFFFFFFF</color>
+
     <color name="colorPrimary">@color/blueSplash</color>
     <color name="colorPrimaryDark">@color/blueMainDark</color>
     <color name="colorAccent">#D81B60</color>
