--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,11 @@
 
     <color name="blueMain">#0099ff</color>
     <color name="blueMainDark">#4158f3</color>
+
+    <color name="redWarning">#df7d7e</color>
+
+
+    <!--CUSTOM VIEW COLORS-->
+    <color name="textInputEditTextUnderlineErrorMarkerDefaultUnderlineColor">@color/white</color>
+    <color name="textBlue">#007ebe</color>
 </resources>
