--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="radiusNormal">8dp</dimen>
     <dimen name="elevationNormal">4dp</dimen>
     <dimen name="spacingMid">16dp</dimen>
+    <dimen name="spacingMidHigh">24dp</dimen>
     <dimen name="spacingLarge">32dp</dimen>
     <dimen name="spacingHuge">52dp</dimen>
     <dimen name="spacingSmall">8dp</dimen>
